# FEM-excersice

./: .gitignore  Manifest.toml  Project.toml  README.md  delaunay.jl  pyproject.toml
1d_poisson/: connectivity.csv  derivation.tex  error.csv  fem_solver.jl  meshing.jl  nodes.csv
2d_poisson_dirichlet/: bc.csv  connectivity.csv  convert_vtk.py  derivation.tex  exact_solution.jl  mesher.jl  nodes.csv  result.csv  result.vtu  solver.jl
2d_stream_function/: GenerateZhukovskyWing.jl  advent_article.tex  article_refs.bib
2d_velocity_potential/: .latexmkrc  GenerateZhukovskyWing.jl  Makefile  ZhukovskyWing.csv  article.tex  geometry.jl  plot_NACA2412.jl  plot_zhukovsky.jl  references.bib  solver.jl
